--- a/comparison-and-complexity.Rmd
+++ b/comparison-and-complexity.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "CTA-ED Exercise 3: Comparison and complexity"
-author: "[name here]"
+author: "Bizhou Zhang"
 date: "2/28/2024"
 output: html_document
 ---
